--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "2",
+    "lucide-react": "^0.555.0",
     "next": "^16.0.3",
     "next-auth": "^4.24.13",
     "react": "^19.2.0",
